<resources>
    <string name="app_name">SalesPag</string>
    <string name="navigation_drawer_open">Abrir barra de menus</string>
    <string name="navigation_drawer_close">Fechar barra de menus</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_send">Send</string>
    <string name="pedidos">Pedidos</string>
    <string name="clientes">Clientes</string>
    <string name="produtos">Produtos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contato">Contato</string>
    <string name="comunica_o">Comunicação</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="seu_email">Seu e-mail</string>
    <string name="sua_senha">Sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="nao_possui_conta_cadastre_se">Não possui conta? Cadastre-se aqui</string>
    <string name="cadastre_sua_conta">Cadastre sua conta</string>
    <string name="seu_nome">Seu nome</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="endereco">Endereço</string>
    <string name="cpf">Cpf</string>
    <string name="bairro">Bairro</string>
    <string name="telefone">Telefone</string>
    <string name="descricao">Descricao</string>
    <string name="valor">valor</string>
    <string name="categoria">Categoria</string>
    <string name="marca">Marca</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="tamanho">Tamanho</string>
    <string name="preco">Preço</string>
    <string name="selecione_os_itens">Selecione os itens</string>
    <string name="pagar_com_pagseguro">Pagar com Pagseguro</string>

    <string-array name="names">
        <item>Playstation 4</item>
        <item>Horizon Zero Dawn</item>
        <item>The Last Of Us</item>
        <item>Notebook HP Envy</item>
        <item>Smartphone Xiaomi MI A2</item>
        <item>Monitor Wiredscreen</item>
        <item>Xbox One</item>
        <item>Mouse optico</item>
        <item>Impresso Multificional</item>
    </string-array>

</resources>
