<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/produtos" />
    </group>

    <item android:title="@string/comunica_o">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/contato" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/sobre" />
        </menu>
    </item>
</menu>
